crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__list__star_expression_precedence.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/list/star_expression_precedence.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..200,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 84..93,
                    value: List(
                        ExprList {
                            node_index: NodeIndex(None),
                            range: 84..93,
                            elts: [
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 86..88,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 87..88,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 91..92,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 94..106,
                    value: List(
                        ExprList {
                            node_index: NodeIndex(None),
                            range: 94..106,
                            elts: [
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 95..102,
                                        value: Compare(
                                            ExprCompare {
                                                node_index: NodeIndex(None),
                                                range: 96..102,
                                                left: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 96..97,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ops: [
                                                    In,
                                                ],
                                                comparators: [
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 101..102,
                                                            id: Name("y"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 104..105,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 107..118,
                    value: List(
                        ExprList {
                            node_index: NodeIndex(None),
                            range: 107..118,
                            elts: [
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 108..114,
                                        value: UnaryOp(
                                            ExprUnaryOp {
                                                node_index: NodeIndex(None),
                                                range: 109..114,
                                                op: Not,
                                                operand: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 113..114,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 116..117,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 119..132,
                    value: List(
                        ExprList {
                            node_index: NodeIndex(None),
                            range: 119..132,
                            elts: [
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 120..128,
                                        value: BoolOp(
                                            ExprBoolOp {
                                                node_index: NodeIndex(None),
                                                range: 121..128,
                                                op: And,
                                                values: [
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 121..122,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 127..128,
                                                            id: Name("y"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 130..131,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 133..145,
                    value: List(
                        ExprList {
                            node_index: NodeIndex(None),
                            range: 133..145,
                            elts: [
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 134..141,
                                        value: BoolOp(
                                            ExprBoolOp {
                                                node_index: NodeIndex(None),
                                                range: 135..141,
                                                op: Or,
                                                values: [
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 135..136,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 140..141,
                                                            id: Name("y"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 143..144,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 146..168,
                    value: List(
                        ExprList {
                            node_index: NodeIndex(None),
                            range: 146..168,
                            elts: [
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 147..164,
                                        value: If(
                                            ExprIf {
                                                node_index: NodeIndex(None),
                                                range: 148..164,
                                                test: BooleanLiteral(
                                                    ExprBooleanLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 153..157,
                                                        value: true,
                                                    },
                                                ),
                                                body: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 148..149,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                orelse: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 163..164,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 166..167,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 169..186,
                    value: List(
                        ExprList {
                            node_index: NodeIndex(None),
                            range: 169..186,
                            elts: [
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 170..182,
                                        value: Lambda(
                                            ExprLambda {
                                                node_index: NodeIndex(None),
                                                range: 171..182,
                                                parameters: Some(
                                                    Parameters {
                                                        range: 178..179,
                                                        node_index: NodeIndex(None),
                                                        posonlyargs: [],
                                                        args: [
                                                            ParameterWithDefault {
                                                                range: 178..179,
                                                                node_index: NodeIndex(None),
                                                                parameter: Parameter {
                                                                    range: 178..179,
                                                                    node_index: NodeIndex(None),
                                                                    name: Identifier {
                                                                        id: Name("x"),
                                                                        range: 178..179,
                                                                        node_index: NodeIndex(None),
                                                                    },
                                                                    annotation: None,
                                                                },
                                                                default: None,
                                                            },
                                                        ],
                                                        vararg: None,
                                                        kwonlyargs: [],
                                                        kwarg: None,
                                                    },
                                                ),
                                                body: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 181..182,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 184..185,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 187..199,
                    value: List(
                        ExprList {
                            node_index: NodeIndex(None),
                            range: 187..199,
                            elts: [
                                Named(
                                    ExprNamed {
                                        node_index: NodeIndex(None),
                                        range: 188..195,
                                        target: Starred(
                                            ExprStarred {
                                                node_index: NodeIndex(None),
                                                range: 188..190,
                                                value: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 189..190,
                                                        id: Name("x"),
                                                        ctx: Store,
                                                    },
                                                ),
                                                ctx: Store,
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 194..195,
                                                value: Int(
                                                    2,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 197..198,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # For list expression, the minimum binding power of star expression is bitwise or.
2 |
3 | [(*x), y]
  |   ^^ Syntax Error: Starred expression cannot be used here
4 | [*x in y, z]
5 | [*not x, z]
  |


  |
3 | [(*x), y]
4 | [*x in y, z]
  |   ^^^^^^ Syntax Error: Comparison expression cannot be used here
5 | [*not x, z]
6 | [*x and y, z]
  |


  |
3 | [(*x), y]
4 | [*x in y, z]
5 | [*not x, z]
  |   ^^^^^ Syntax Error: Boolean expression cannot be used here
6 | [*x and y, z]
7 | [*x or y, z]
  |


  |
4 | [*x in y, z]
5 | [*not x, z]
6 | [*x and y, z]
  |   ^^^^^^^ Syntax Error: Boolean expression cannot be used here
7 | [*x or y, z]
8 | [*x if True else y, z]
  |


  |
5 | [*not x, z]
6 | [*x and y, z]
7 | [*x or y, z]
  |   ^^^^^^ Syntax Error: Boolean expression cannot be used here
8 | [*x if True else y, z]
9 | [*lambda x: x, z]
  |


   |
 6 | [*x and y, z]
 7 | [*x or y, z]
 8 | [*x if True else y, z]
   |   ^^^^^^^^^^^^^^^^ Syntax Error: Conditional expression cannot be used here
 9 | [*lambda x: x, z]
10 | [*x := 2, z]
   |


   |
 7 | [*x or y, z]
 8 | [*x if True else y, z]
 9 | [*lambda x: x, z]
   |   ^^^^^^^^^^^ Syntax Error: Lambda expression cannot be used here
10 | [*x := 2, z]
   |


   |
 8 | [*x if True else y, z]
 9 | [*lambda x: x, z]
10 | [*x := 2, z]
   |  ^^ Syntax Error: Assignment expression target must be an identifier
   |
